<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#A31444"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/add_comment_txt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        tools:layout_editor_absoluteX="62dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:layout_marginTop="18dp"
        android:hint="@string/comment"
        android:textColorHint="@color/tabBgColor"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContent"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_margin="10dp"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="#101010"
            android:textColorHint="@color/white"
            android:textColorLink="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_txt"
        android:background="@drawable/circular_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/content"/>


</androidx.constraintlayout.widget.ConstraintLayout>